[package]
name = "solana-dapp"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "1.5.3"
borsh-derive = "1.5.3"
solana-program = "2.1.5"
thiserror = "2.0.6"

[dev-dependencies] 
solana-logger = "2.1.5"
solana-program-test = "2.1.5"
solana-sdk = "2.1.5"
solana-validator = "1.15.0"

[profile.release]
codegen-units = 1

# Tell `rustc` to optimize for small code size.
opt-level = "z"

lto = true
debug = false
panic = "abort"

# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true

[lib]
name = "stakingdapp"
crate-type = ["cdylib"
, "lib"
]
